--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.21.2",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
+    "echarts": "^5.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
