--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 upstream nest-server {
-    server 192.168.3.9:3005;
+    server nest-app:3005;
 }
 
 server {
@@ -15,6 +15,7 @@ server {
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
+        try_files $uri $uri/ /index.html;
     }
 
     error_page   500 502 503 504  /50x.html;
